--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
   "homepage": "https://github.com/entropyxyz/devnet_cli_tool#readme",
   "dependencies": {
     "@polkadot/api": "^9.6.2",
+    "@polkadot/util-crypto": "^10.1.11",
+    "axios": "^0.27.2",
     "dotenv": "^16.0.3",
-    "inquirer": "8.0.0"
+    "inquirer": "8.0.0",
+    "x25519": "^0.1.0"
   },
   "devDependencies": {
     "@types/inquirer": "^9.0.2"
