--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@polkadot/util-crypto": "^10.1.11",
     "axios": "^0.27.2",
     "dotenv": "^16.0.3",
+    "ethers": "^5.7.2",
     "inquirer": "8.0.0",
     "x25519": "^0.1.0"
   },
