--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ethers": "^5.7.2",
     "inquirer": "8.0.0",
     "ts-node": "^10.9.1",
+    "typescript": "^4.8.4",
     "x25519": "^0.1.0"
   },
   "devDependencies": {
