--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   },
   "homepage": "https://github.com/entropyxyz/devnet_cli_tool#readme",
   "dependencies": {
-    "@polkadot/api": "^9.6.2",
-    "@polkadot/util-crypto": "^10.1.11",
+    "@entropyxyz/entropy-js": "^0.0.5",
+    "@polkadot/util-crypto": "^10.4.1",
     "axios": "^0.27.2",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
