initial changes to cli

--- a/.gitignore
+++ b/.gitignore
@@ -101,6 +101,13 @@ typings/
 
 # Yarn Integrity file
 .yarn-integrity
+.yarn
+.yarn/*
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
 
 # dotenv environment variables file
 .env
