--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/entropyxyz/devnet_cli_tool#readme",
   "dependencies": {
-    "@entropyxyz/entropy-js": "^0.1.1",
+    "@entropyxyz/sdk": "^0.1.3",
     "@polkadot/util-crypto": "^12.5.1",
     "axios": "^0.27.2",
     "dotenv": "^16.0.3",
