--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
   "dependencies": {
     "@entropyxyz/sdk": "^0.1.3",
     "@polkadot/util-crypto": "^12.5.1",
+    "alchemy-sdk": "^3.1.2",
     "axios": "^0.27.2",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.4.1",
     "ethers": "^5.7.2",
     "inquirer": "8.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
+    "viem": "^2.7.6",
     "x25519": "^0.1.0"
   },
   "devDependencies": {
