--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint:fix": "eslint . --ext .ts --fix",
     "lint": "eslint . --ext .ts",
+    "tsc": "tsc",
     "start": "ts-node index.ts"
   },
   "repository": {
@@ -22,7 +23,7 @@
   },
   "homepage": "https://github.com/entropyxyz/devnet_cli_tool#readme",
   "dependencies": {
-    "@entropyxyz/sdk": "^0.1.3",
+    "@entropyxyz/sdk": "^0.1.4",
     "@polkadot/util-crypto": "^12.5.1",
     "alchemy-sdk": "^3.1.2",
     "axios": "^0.27.2",
@@ -35,9 +36,12 @@
     "x25519": "^0.1.0"
   },
   "devDependencies": {
+    "@swc/core": "^1.4.0",
+    "@swc/helpers": "^0.5.6",
     "@types/inquirer": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
-    "eslint": "^8.56.0"
+    "eslint": "^8.56.0",
+    "regenerator-runtime": "^0.14.1"
   }
 }
