--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/entropyxyz/devnet_cli_tool#readme",
   "dependencies": {
     "@entropyxyz/sdk": "^0.1.4",
+    "@ethereumjs/util": "^9.0.2",
     "@polkadot/util-crypto": "^12.5.1",
     "alchemy-sdk": "^3.1.2",
     "axios": "^0.27.2",
