--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "devnet_cli_tool",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "entropy": "yarn run start",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -24,6 +23,7 @@
   "homepage": "https://github.com/entropyxyz/devnet_cli_tool#readme",
   "dependencies": {
     "@entropyxyz/sdk": "^0.1.4",
+    "@ethereumjs/util": "^9.0.2",
     "@polkadot/util-crypto": "^12.5.1",
     "alchemy-sdk": "^3.1.2",
     "axios": "^0.27.2",
@@ -32,7 +32,7 @@
     "inquirer": "8.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
-    "viem": "^2.7.6",
+    "viem": "^2.7.8",
     "x25519": "^0.1.0"
   },
   "devDependencies": {
