--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "devnet_cli_tool",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "entropy": "yarn run start",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint:fix": "eslint . --ext .ts --fix",
+    "lint": "eslint . --ext .ts",
+    "tsc": "tsc",
     "start": "ts-node index.ts"
   },
   "repository": {
@@ -20,7 +22,8 @@
   },
   "homepage": "https://github.com/entropyxyz/devnet_cli_tool#readme",
   "dependencies": {
-    "@entropyxyz/sdk": "^0.1.3",
+    "@entropyxyz/sdk": "^0.1.4",
+    "@ethereumjs/util": "^9.0.2",
     "@polkadot/util-crypto": "^12.5.1",
     "alchemy-sdk": "^3.1.2",
     "axios": "^0.27.2",
@@ -29,10 +32,16 @@
     "inquirer": "8.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
-    "viem": "^2.7.6",
+    "viem": "^2.7.8",
     "x25519": "^0.1.0"
   },
   "devDependencies": {
-    "@types/inquirer": "^9.0.2"
+    "@swc/core": "^1.4.0",
+    "@swc/helpers": "^0.5.6",
+    "@types/inquirer": "^9.0.2",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.56.0",
+    "regenerator-runtime": "^0.14.1"
   }
 }
