--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   "dependencies": {
     "@entropyxyz/sdk": "^0.1.4",
     "@ethereumjs/util": "^9.0.2",
+    "@polkadot/util": "^12.6.2",
     "@polkadot/util-crypto": "^12.5.1",
+    "@types/node": "^20.12.11",
     "alchemy-sdk": "^3.1.2",
     "axios": "^0.27.2",
     "dotenv": "^16.4.1",
