--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@polkadot/util-crypto": "^12.5.1",
     "@types/node": "^20.12.11",
     "alchemy-sdk": "^3.1.2",
+    "ansi-colors": "^4.1.3",
     "axios": "^0.27.2",
+    "cli-progress": "^3.12.0",
     "dotenv": "^16.4.1",
     "ethers": "^5.7.2",
     "inquirer": "8.0.0",
@@ -40,6 +42,7 @@
   "devDependencies": {
     "@swc/core": "^1.4.0",
     "@swc/helpers": "^0.5.6",
+    "@types/cli-progress": "^3",
     "@types/inquirer": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
