--- a/package.json
+++ b/package.json
@@ -48,5 +48,6 @@
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.56.0",
     "regenerator-runtime": "^0.14.1"
-  }
+  },
+  "packageManager": "yarn@1.22.1"
 }
