remove deps, move files, add license, fix package.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "noEmit": true,
     "target": "esnext",
     "esModuleInterop": true,
+    "moduleResolution": "node"
   },
   // "exclude": ["node_modules", "dist", "build", "examples", "old", "src/flows/*"],
   "ts-node": {
