--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "devnet_cli_tool",
+  "name": "@entropyxyz/cli",
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "entropy": "yarn run start",
+    "entropy": "ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint:fix": "eslint . --ext .ts --fix",
     "lint": "eslint . --ext .ts",
     "tsc": "tsc",
-    "start": "ts-node index.ts"
+    "start": "ts-node src/index.ts"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/entropyxyz/devnet_cli_tool.git"
+    "url": "git+https://github.com/entropyxyz/cli.git"
   },
   "keywords": [],
   "author": "Jesse Abramowitz",
-  "license": "ISC",
+  "license": "AGPL-3.0-only",
   "bugs": {
-    "url": "https://github.com/entropyxyz/devnet_cli_tool/issues"
+    "url": "https://github.com/entropyxyz/cli/issues"
   },
-  "homepage": "https://github.com/entropyxyz/devnet_cli_tool#readme",
+  "homepage": "https://github.com/entropyxyz/cli#readme",
   "dependencies": {
     "@entropyxyz/sdk": "^0.1.4",
     "@ethereumjs/util": "^9.0.2",
@@ -29,7 +29,6 @@
     "@types/node": "^20.12.11",
     "alchemy-sdk": "^3.1.2",
     "ansi-colors": "^4.1.3",
-    "axios": "^0.27.2",
     "cli-progress": "^3.12.0",
     "dotenv": "^16.4.1",
     "ethers": "^5.7.2",
@@ -47,6 +46,7 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.56.0",
+    "ts-standard": "^12.0.2",
     "regenerator-runtime": "^0.14.1"
   },
   "packageManager": "yarn@1.22.1"
