--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "entropy": "ts-node src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint:fix": "eslint . --ext .ts --fix",
-    "lint": "eslint . --ext .ts",
-    "tsc": "tsc",
-    "start": "ts-node src/index.ts"
+    "start": "ts-node src/index.ts",
+    "entropy": "npm run start",
+    "test": "npm run type-check && npm run lint",
+    "lint": "eslint . --ext .ts --fix",
+    "type-check": "tsc --project tsconfig.json",
+
+    "prepare": "husky",
+    "postinstall": "husky",
+    "prepack": "pinst --disable",
+    "postpack": "pinst --enable"
   },
   "repository": {
     "type": "git",
@@ -33,7 +37,7 @@
     "dotenv": "^16.4.1",
     "ethers": "^5.7.2",
     "inquirer": "8.0.0",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "typescript": "^4.8.4",
     "viem": "^2.7.8",
     "x25519": "^0.1.0"
@@ -43,11 +47,16 @@
     "@swc/helpers": "^0.5.6",
     "@types/cli-progress": "^3",
     "@types/inquirer": "^9.0.2",
+    "@types/node": "^20.12.12",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "husky": "^9.0.11",
+    "pinst": "^3.0.0",
     "eslint": "^8.56.0",
-    "ts-standard": "^12.0.2",
     "regenerator-runtime": "^0.14.1"
   },
-  "packageManager": "yarn@1.22.1"
+  "packageManager": "yarn@1.22.1",
+  "lint-staged": {
+    "*.ts": "eslint --fix"
+  }
 }
