--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "test": "npm run type-check && npm run lint",
     "lint": "eslint . --ext .ts --fix",
     "type-check": "tsc --project tsconfig.json",
-
     "prepare": "husky",
     "postinstall": "husky",
     "prepack": "pinst --disable",
@@ -30,7 +29,7 @@
     "@ethereumjs/util": "^9.0.2",
     "@polkadot/util": "^12.6.2",
     "@polkadot/util-crypto": "^12.5.1",
-    "@types/node": "^20.12.11",
+    "@types/node": "^20.12.12",
     "alchemy-sdk": "^3.1.2",
     "ansi-colors": "^4.1.3",
     "cli-progress": "^3.12.0",
@@ -50,9 +49,10 @@
     "@types/node": "^20.12.12",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
-    "husky": "^9.0.11",
-    "pinst": "^3.0.0",
     "eslint": "^8.56.0",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
+    "pinst": "^3.0.0",
     "regenerator-runtime": "^0.14.1"
   },
   "packageManager": "yarn@1.22.1",
