Mixmix/types+lint (#44)
* Improves README readability. (#42)

* Improves README readability.

* Update README.md

Co-authored-by: Nayyir Jutha <nayyir.jutha@gmail.com>

---------

Co-authored-by: Nayyir Jutha <nayyir.jutha@gmail.com>

* remove deps, move files, add license, fix package.json

* linting hooks, tidy

* mostly fix types?

---------

Co-authored-by: Johnny <9611008+johnnymatthews@users.noreply.github.com>
Co-authored-by: Nayyir Jutha <nayyir.jutha@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,21 @@
     "noEmit": true,
     "target": "esnext",
     "esModuleInterop": true,
+    "moduleResolution": "node",
+    "typeRoots": [
+      "node_modules/@types",
+      "@types/",
+      "@entropyxyz/sdk",
+      "@entropyxyz/sdk/keys"
+    ]
   },
-  // "exclude": ["node_modules", "dist", "build", "examples", "old", "src/flows/*"],
+  "include": [
+    "src/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "src/flows/ethTransaction/*.ts"
+  ],
   "ts-node": {
     "swc": true,
     "experimentalSpecifierResolution": "node",
