--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start": "ts-node src/entropy.ts",
     "entropy": "npm run start",
     "test": "npm run type-check && npm run lint",
     "lint": "eslint . --ext .ts --fix",
@@ -14,14 +14,16 @@
     "postpack": "pinst --enable"
   },
   "bin": {
-    "@entropyxyz/cli": "./src/bin/cli.sh",
     "entropy": "./src/bin/cli.sh"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/entropyxyz/cli.git"
   },
-  "keywords": [],
+  "keywords": [
+    "entropy",
+    "entropyxyz"
+  ],
   "author": "Jesse Abramowitz",
   "license": "AGPL-3.0-only",
   "bugs": {
@@ -37,10 +39,11 @@
     "alchemy-sdk": "^3.1.2",
     "ansi-colors": "^4.1.3",
     "cli-progress": "^3.12.0",
+    "commander": "^12.0.0",
+    "debug": "^4.3.4",
     "dotenv": "^16.4.1",
     "ethers": "^5.7.2",
     "inquirer": "8.0.0",
-    "minimist": "^1.2.8",
     "ts-node": "^10.9.2",
     "typescript": "^4.8.4",
     "viem": "^2.7.8",
