first pass on balance

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "postpack": "pinst --enable"
   },
   "bin": {
-    "entropy": "./src/bin/cli.sh"
+    "entropy": "./src/bin/entropy.sh"
   },
   "repository": {
     "type": "git",
