--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "alchemy-sdk": "^3.1.2",
     "ansi-colors": "^4.1.3",
     "cli-progress": "^3.12.0",
+    "debug": "^4.3.4",
     "dotenv": "^16.4.1",
     "ethers": "^5.7.2",
     "inquirer": "8.0.0",
