--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "homepage": "https://github.com/entropyxyz/cli#readme",
   "dependencies": {
-    "@entropyxyz/sdk": "^0.1.4",
+    "@entropyxyz/sdk": "^0.1.5-0",
     "@ethereumjs/util": "^9.0.2",
     "@polkadot/util": "^12.6.2",
     "@polkadot/util-crypto": "^12.5.1",
