[NayNay] Updating rc version for sdk
- updated rc version and cleaned up package json scripts for linking local sdk

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "postinstall": "husky",
     "prepack": "pinst --disable",
     "postpack": "pinst --enable",
-    "reload-local-sdk": "yarn unlink @entropyxyz/sdk && yarn link @entropyxyz/sdk"
+    "link:sdk": "yarn link @entropyxyz/sdk",
+    "unlink:sdk": "yarn unlink @entropyxyz/sdk",
+    "re-link:sdk": "yarn unlink:sdk && yarn link:sdk"
   },
   "repository": {
     "type": "git",
@@ -27,7 +29,7 @@
   },
   "homepage": "https://github.com/entropyxyz/cli#readme",
   "dependencies": {
-    "@entropyxyz/sdk": "^0.1.5-3",
+    "@entropyxyz/sdk": "^0.1.5-5",
     "@ethereumjs/util": "^9.0.2",
     "@types/node": "^20.12.12",
     "alchemy-sdk": "^3.1.2",
