[NayNay] Signing bug for validators
- updated signing with adapters to retry the signing request if a specific error is hit as defined in this issue https://github.com/entropyxyz/sdk/issues/367

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@entropyxyz/sdk": "^0.1.5-5",
     "@ethereumjs/util": "^9.0.2",
+    "@polkadot/util": "^12.6.2",
     "@types/node": "^20.12.12",
     "alchemy-sdk": "^3.1.2",
     "ansi-colors": "^4.1.3",
