--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "homepage": "https://github.com/entropyxyz/cli#readme",
   "dependencies": {
-    "@entropyxyz/sdk": "^0.1.5-5",
+    "@entropyxyz/sdk": "^0.2.1",
     "@ethereumjs/util": "^9.0.2",
     "@types/node": "^20.12.12",
     "alchemy-sdk": "^3.1.2",
