--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,28 @@
 {
   "compilerOptions": {
+    "target": "ES6",
     "skipLibCheck": true,
     "noEmit": true,
-    "target": "esnext",
-    "esModuleInterop": true,
-    "moduleResolution": "node",
+    "incremental": true,
     "typeRoots": [
       "node_modules/@types",
       "@types/",
-      "@entropyxyz/sdk",
-      "@entropyxyz/sdk/keys"
-    ]
+      "@polkadot/types/*",
+      "substrate-generated-types/interfaces"
+    ],
+    "tsBuildInfoFile": ".tsbuildinfo",
+    "moduleResolution": "node",
+    "module": "Node16"
   },
-  "include": [
-    "src/**/*.ts"
-  ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "dist",
+    "build",
+    "examples",
+    "old",
+    "substrate-generated-types"
   ],
   "ts-node": {
-    "swc": true,
-    "experimentalSpecifierResolution": "node",
-    "compilerOptions": {
-      "module": "commonjs"
-    }
+    "experimentalSpecifierResolution": "node"
   }
 }
