--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   },
   "keywords": [
     "entropy",
-    "entropyxyz"
+    "entropyxyz",
+    "entropy protocol"
   ],
   "author": "Jesse Abramowitz",
   "license": "AGPL-3.0-only",
