--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "cli-progress": "^3.12.0",
     "debug": "^4.3.4",
     "dotenv": "^16.4.1",
+    "env-paths": "^3.0.0",
     "ethers": "^5.7.2",
     "inquirer": "8.0.0",
+    "mkdirp": "^3.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^4.8.4",
     "viem": "^2.7.8",
