--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "entropy protocol"
   ],
   "author": "entropy.xyz",
-
   "license": "AGPL-3.0-only",
   "bugs": {
     "url": "https://github.com/entropyxyz/cli/issues"
@@ -44,6 +43,8 @@
     "@entropyxyz/sdk": "^0.2.1",
     "@ethereumjs/util": "^9.0.2",
     "@polkadot/util": "^12.6.2",
+    "@polkadot/util-crypto": "^12.6.2",
+    "@substrate/txwrapper-polkadot": "^7.5.0",
     "@types/node": "^20.12.12",
     "alchemy-sdk": "^3.1.2",
     "ansi-colors": "^4.1.3",
@@ -71,8 +72,8 @@
     "lint-staged": "^15.2.2",
     "pinst": "^3.0.0",
     "regenerator-runtime": "^0.14.1",
-    "tsup": "^6.7.0",
     "ts-node": "^10.9.2",
+    "tsup": "^6.7.0",
     "typescript": "^4.8.4"
   },
   "packageManager": "yarn@1.22.1",
