Mixmix/test migration (#108)
* write tests for migrations, refactor

* finish writing config tests

* finish writing config tests

* Update src/config/index.ts

Co-authored-by: Nayyir Jutha <nayyir.jutha@gmail.com>

* Update src/config/index.ts

Co-authored-by: Nayyir Jutha <nayyir.jutha@gmail.com>

---------

Co-authored-by: Nayyir Jutha <nayyir.jutha@gmail.com>

--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "start": "npx tsx src/cli.ts",
     "start:debug": "DEBUG=@entropyxyz/cli yarn start",
     "build": "tsup",
-    "test": "npm run type-check && npm run lint",
+    "test": "yarn test:types && yarn test:ts && yarn test:only",
     "lint": "eslint . --ext .ts --fix",
-    "type-check": "tsc --project tsconfig.json",
+    "test:only": "./dev/bin/test-only.sh",
+    "test:ts": "./dev/bin/test-ts.sh",
+    "test:types": "tsc --project tsconfig.json",
     "prepare": "husky",
     "postinstall": "husky",
     "prepack": "pinst --disable",
@@ -50,7 +52,6 @@
     "cli-progress": "^3.12.0",
     "commander": "^12.0.0",
     "debug": "^4.3.4",
-    "dotenv": "^16.4.1",
     "ethers": "^5.7.2",
     "inquirer": "8.0.0",
     "mkdirp": "^3.0.1",
@@ -71,8 +72,11 @@
     "lint-staged": "^15.2.2",
     "pinst": "^3.0.0",
     "regenerator-runtime": "^0.14.1",
-    "tsup": "^6.7.0",
+    "tap-spec": "^5.0.0",
+    "tape": "^5.7.5",
     "ts-node": "^10.9.2",
+    "tsup": "^6.7.0",
+    "tsx": "^4.15.3",
     "typescript": "^4.8.4"
   },
   "packageManager": "yarn@1.22.1",
