--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   },
   "homepage": "https://github.com/entropyxyz/cli#readme",
   "dependencies": {
-    "@entropyxyz/sdk": "^0.2.1",
+    "@entropyxyz/sdk": "^0.2.2-0",
     "@polkadot/util": "^12.6.2",
     "@types/node": "^20.12.12",
     "ansi-colors": "^4.1.3",
