--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   },
   "homepage": "https://github.com/entropyxyz/cli#readme",
   "dependencies": {
-    "@entropyxyz/sdk": "^0.2.1",
+    "@entropyxyz/sdk": "^0.2.2-0",
     "@polkadot/util": "^12.6.2",
     "@types/node": "^20.12.12",
     "ansi-colors": "^4.1.3",
@@ -67,6 +67,7 @@
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "pinst": "^3.0.0",
+    "readline": "^1.3.0",
     "regenerator-runtime": "^0.14.1",
     "tap-spec": "^5.0.0",
     "tape": "^5.7.5",
