--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "cli-progress": "^3.12.0",
     "commander": "^12.0.0",
     "debug": "^4.3.4",
+    "env-paths": "^3.0.0",
     "inquirer": "8.0.0",
     "mkdirp": "^3.0.1",
     "typescript": "^4.8.4",
