[NayNay] Debug Log
- install and integrated winston logging library into cli
- allowing us to be able to log any and everything to the respective files saved in the ~/path/to/syslogs/entropy-cryptography/entropy-cli.*.log
- included example use of new logger in the tui flow for balance

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "mkdirp": "^3.0.1",
     "typescript": "^4.8.4",
     "viem": "^2.7.8",
+    "winston": "^3.13.0",
     "x25519": "^0.1.0"
   },
   "devDependencies": {
