--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "debug": "^4.3.4",
     "env-paths": "^3.0.0",
     "inquirer": "8.0.0",
+    "is-base64": "^1.1.0",
     "mkdirp": "^3.0.1",
     "typescript": "^4.8.4",
     "viem": "^2.7.8",
