--- a/package.json
+++ b/package.json
@@ -49,9 +49,9 @@
     "ansi-colors": "^4.1.3",
     "cli-progress": "^3.12.0",
     "commander": "^12.0.0",
-    "debug": "^4.3.4",
     "env-paths": "^3.0.0",
     "inquirer": "8.0.0",
+    "lodash.clonedeep": "^4.5.0",
     "mkdirp": "^3.0.1",
     "typescript": "^4.8.4",
     "viem": "^2.7.8",
