--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
   "homepage": "https://github.com/entropyxyz/cli#readme",
   "dependencies": {
     "@entropyxyz/sdk": "^0.2.3",
-    "@types/node": "^20.12.12",
     "ansi-colors": "^4.1.3",
     "cli-progress": "^3.12.0",
     "commander": "^12.0.0",
@@ -63,6 +62,7 @@
     "@types/cli-progress": "^3",
     "@types/inquirer": "^9.0.2",
     "@types/node": "^20.12.12",
+    "@types/tape": "^5.6.4",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.56.0",
