--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "ansi-colors": "^4.1.3",
     "cli-progress": "^3.12.0",
     "commander": "^12.0.0",
+    "eip55": "^2.1.1",
     "env-paths": "^3.0.0",
+    "ethereum-cryptography": "^2.2.1",
     "inquirer": "8.0.0",
     "lodash.clonedeep": "^4.5.0",
     "mkdirp": "^3.0.1",
