add a "global entropy" test for --help

--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "cli and tui for interacting with the entropy protocol",
   "type": "module",
   "scripts": {
-    "start": "yarn build && npm install -g && entropy",
+    "start": "yarn build:global && entropy",
     "start:debug": "DEBUG=@entropyxyz/cli yarn start",
     "build": "tsup",
-    "test": "yarn test:types && yarn test:ts && yarn test:only",
+    "build:global": "tsup && npm install -g",
     "lint": "eslint . --ext .ts --fix",
+    "test": "yarn test:types && yarn build:global && yarn test:ts && yarn test:only",
     "test:only": "./dev/bin/test-only.sh",
     "test:ts": "yarn removedb && ./dev/bin/test-ts.sh",
     "test:types": "tsc --project tsconfig.json",
