test /etc/hosts aliases

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsup",
     "build:global": "tsup && npm install -g",
     "lint": "eslint . --ext .ts --fix",
-    "test": "yarn test:types && yarn build:global && yarn test:ts && yarn test:only",
+    "test": "yarn test:types && yarn build:global && yarn test:hosts && yarn test:ts && yarn test:only",
+    "test:hosts": "./dev/bin/test-hosts.sh",
     "test:only": "./dev/bin/test-only.sh",
     "test:ts": "yarn removedb && ./dev/bin/test-ts.sh",
     "test:types": "tsc --project tsconfig.json",
