--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "inquirer": "8.0.0",
     "mkdirp": "^3.0.1",
     "winston": "^3.13.0",
-    "x25519": "^0.1.0"
+    "x25519": "^0.1.0",
+    "yocto-spinner": "^0.1.1"
   },
   "devDependencies": {
     "@swc/core": "^1.4.0",
