--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@entropyxyz/cli",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "cli and tui for interacting with the entropy protocol",
   "type": "module",
   "scripts": {
@@ -44,7 +44,7 @@
   },
   "homepage": "https://github.com/entropyxyz/cli#readme",
   "dependencies": {
-    "@entropyxyz/sdk": "0.3.0-1",
+    "@entropyxyz/sdk": "0.3.0",
     "ansi-colors": "^4.1.3",
     "cli-progress": "^3.12.0",
     "commander": "^12.1.0",
