--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "yarn build:global && entropy",
     "start:debug": "DEBUG=@entropyxyz/cli yarn start",
-    "build": "source ./node_modules/@entropyxyz/sdk/dev/bin/ENTROPY_CORE_VERSION.sh && tsup",
+    "build": "source ./node_modules/@entropyxyz/sdk/dev/bin/ENTROPY_CORE_VERSION.sh && tsup --env.ENTROPY_CORE_VERSION $ENTROPY_CORE_VERSION",
     "build:global": "yarn build && npm install -g",
     "lint": "eslint . --ext .ts --fix",
     "test": "yarn test:types && yarn build:global && yarn test:ts && yarn test:only",
