--- a/package.json
+++ b/package.json
@@ -77,6 +77,10 @@
     "tsx": "^4.15.3",
     "typescript": "^4.8.4"
   },
+  "peerDependencies": {
+    "husky": "^9.0.11",
+    "patch-package": "^8.0.0"
+  },
   "packageManager": "yarn@1.22.1",
   "lint-staged": {
     "*.ts": "eslint --fix"
