--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.4",
   "description": "cli and tui for interacting with the entropy protocol",
   "type": "module",
+  "engines": {
+    "node": "20.10.0"
+  },
   "scripts": {
     "start": "yarn build:global && entropy",
     "start:debug": "DEBUG=@entropyxyz/cli yarn start",
@@ -76,10 +79,6 @@
     "tsup": "^6.7.0",
     "tsx": "^4.15.3",
     "typescript": "^4.8.4"
-  },
-  "peerDependencies": {
-    "husky": "^9.0.11",
-    "patch-package": "^8.0.0"
   },
   "packageManager": "yarn@1.22.1",
   "lint-staged": {
