--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "homepage": "https://github.com/entropyxyz/cli#readme",
   "dependencies": {
     "@entropyxyz/sdk": "0.4.0",
+    "ajv": "^8.17.1",
     "ansi-colors": "^4.1.3",
     "cli-progress": "^3.12.0",
     "commander": "^12.1.0",
