--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "homepage": "https://github.com/entropyxyz/cli#readme",
   "dependencies": {
     "@entropyxyz/sdk": "0.4.0",
+    "ajv": "^8.17.1",
     "commander": "^12.1.0",
     "env-paths": "^3.0.0",
     "inquirer": "8.0.0",
